# minimal_slam

./: CMakeLists.txt  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  LIDAR_ONLY_SUMMARY.md  README.md  USAGE_IMU_FUSION.md  package.xml
config/: ekf.yaml  slam.yaml
guides/: INSTALL_RF2O.md  LIDAR_ONLY_SLAM.md  LIDAR_QUICK_START.md  NO_ENCODERS_GUIDE.md  QUICK_REFERENCE.md  ROSBAG_PLAYBACK.md  USAGE.txt
launch/: slam.launch.py  slam_lidar_only.launch.py  slam_playback.launch.py  slam_playback_with_imu.launch.py  slam_with_imu.launch.py
robot_data/: README.md  metadata.yaml  my_robot_map.pgm  my_robot_map.yaml
scripts/: imu_combiner.py
urdf/: ackermann_car.xacro
